--- a/assets/section-related-products.css
+++ b/assets/section-related-products.css
@@ -39,7 +39,6 @@ body {
 
   .heading {
     font-size: 24px;
-    margin-bottom: -11px;
     margin-left: 25px;
   }
 
